--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -40,6 +41,7 @@
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "use-debounce": "^10.0.4",
+    "yup": "^1.6.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
