--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
+    "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
     "sass": "^1.86.3",
