--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@microsoft/signalr": "^8.0.7",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.5",
@@ -40,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
+    "react-multi-select-component": "^4.3.4",
     "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
