--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_API_URL=https://localhost:7006/api
-VITE_URL_HUB=https://localhost:7006/notificationHub
+VITE_API_URL=http://localhost:5005/api
+VITE_URL_HUB=http://localhost:5005/notificationHub
