--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-table": "^8.21.3",
+    "@types/flatpickr": "^3.0.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "flatpickr": "^4.6.13",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "js-cookie": "^3.0.5",
@@ -47,6 +49,7 @@
     "react-multi-select-component": "^4.3.4",
     "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "sass": "^1.86.3",
     "tailwind-merge": "^3.2.0",
