--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/flatpickr": "^3.0.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
