--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-virtual": "^3.13.12",
     "@types/flatpickr": "^3.0.2",
     "axios": "^1.8.4",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -43,6 +44,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
