--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "postbuild": "copy web.config dist\\"
   },
   "dependencies": {
+    "@handsontable/react": "^16.0.1",
+    "@handsontable/react-wrapper": "^16.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@microsoft/signalr": "^8.0.7",
     "@radix-ui/react-alert-dialog": "^1.1.7",
@@ -37,6 +39,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "flatpickr": "^4.6.13",
+    "handsontable": "^16.0.1",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "js-cookie": "^3.0.5",
@@ -58,6 +61,7 @@
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "use-debounce": "^10.0.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
