--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.23.24",
     "handsontable": "^16.0.1",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
