--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "sass": "^1.86.3",
+    "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "use-debounce": "^10.0.4",
