--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
-VITE_API_URL=http://localhost:5005/api
-VITE_URL_HUB=http://localhost:5005/notificationHub
+VITE_BASE_URL=http://localhost:5005
+VITE_URL_FILE_SERVER=http://172.100.100.52:7979
+VITE_API_URL=${VITE_BASE_URL}/api
+VITE_URL_HUB=${VITE_BASE_URL}/notificationHub
