--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
-VITE_API_URL=https://172.100.100.52:8882/api
+VITE_BASE_URL=https://172.100.100.52:8882
+VITE_URL_FILE_SERVER=http://172.100.100.52:7979
+VITE_API_URL=${VITE_BASE_URL}/api
